--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "AssoCli"
+name = "assocli"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,4 +8,5 @@ clap = { version = "4.5", features = ["derive"] }
 colored = "3.0.0"
 console = "0.16.1"
 dialoguer = "0.12.0"
+indicatif = "0.18.2"
 yansi = "1.0.1"
